[feat/#264] 회원 기록 조회 문제해결