@@ -8,6 +8,7 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import lombok.RequiredArgsConstructor;
@@ -98,7 +99,8 @@ public class MemberServiceImpl implements MemberService {
             if (member.getVisibility().equals(Visibility.PUBLIC)) {
                 topCloths = clothRepositoryService.getTop3PublicCloths(member);
             } else {
-                topCloths = List.of(null, null, null);
+                topCloths = Arrays.asList(null, null, null);
+
             }
         }
 
